Issue #155 Thanks too tall
Only apply height to book title.

--- a/style.scss
+++ b/style.scss
@@ -385,7 +385,9 @@ h2 {
 
     h1 {
         font-size: 2em;
-        height: 2.5em;
+        &.title {
+          height: 2.5em;
+        }
         width: 24em;
         max-width: 100%;
         margin: 2em auto;
